--- a/src/components/Searchbar.astro
+++ b/src/components/Searchbar.astro
@@ -24,20 +24,21 @@ import search_contents from "../search.json"
     #search-menu > input:hover + ul{
         display: block;
     }
-    
-    .number input {
-        background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" id="closeIcon" viewBox="0 0 16 16"><path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/></svg>');
-        display: inline-block;
-        width: 123px;
-        height: 21px;
-        background-repeat: no-repeat;
-        background-position: 96px 0;
-        vertical-align: middle;
+
+    i#clear {
+        position: absolute;
+        right: 0px;
+        margin-top: auto;
+        margin-bottom: auto;
+        cursor: pointer;
+        color: #888;
     }
+    
 </style>
 
 <div id="search-menu" class="position-relative w-100 sticky">
-    <input type="text" class="form-control w-100" type="search" placeholder="Search for keyword" id="searchbox" autocomplete="off" >
+    <i class="bi bi-x" id="clear" onclick="searchbox.blur();"></i>
+    <input type="text" class="form-control w-100" placeholder="Search for keyword" id="searchbox" autocomplete="off" />
     <ul id="searchresults" class="position-absolute z-3 w-100 p-0">
 
     </ul>
@@ -2159,10 +2160,22 @@ import search_contents from "../search.json"
 
     resize_searchbar();
 
+    const clear_icon = document.querySelector("#clear");
+
+    function resize_icon(){
+      clear_icon.style = `font-size: ${searchbox.clientHeight}px; top: -${searchbox.clientHeight/4+2}px;`;
+      console.log(`${searchbox.clientHeight}px`)
+    }
+
+    resize_icon();
+
+    clear_
+
     window.addEventListener(
         "resize", 
         function(){
           resize_searchbar();
+          resize_icon();
         }
     )
 </script>
