--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,9 +25,11 @@ const pagename = cleaned[1]
 		<title>{title}</title>
 
 		<link href="/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
 
 		<script src="/bootstrap.min.js" is:inline></script>
+		
 
 		<script id="MathJax-script" src="/mathjax/tex-chtml.js" is:inline></script>
 
