--- a/src/components/Searchbar.astro
+++ b/src/components/Searchbar.astro
@@ -17,6 +17,16 @@ import search_contents from "../search.json"
         display: block;
     }
 
+    i#clear:has(+ input:hover){
+        transition: all .2s ease-in-out;
+        transform: scale(1);
+    }
+
+    i#clear:hover{
+      color: #333;
+      transform: scale(1);
+    }
+
     #search-menu > ul{
         display: none;
     }
@@ -25,23 +35,43 @@ import search_contents from "../search.json"
         display: block;
     }
 
+    p#tooltip:has(+i#clear:hover){
+      transition: opacity .5s ease-in;
+      opacity: 100%;
+    }
+
     i#clear {
         position: absolute;
         right: 0px;
         margin-top: auto;
         margin-bottom: auto;
         cursor: pointer;
+        transform: scale(0);
+        transition: all .2s ease-in-out;
         color: #888;
     }
     
+
+    p#tooltip {
+        position: absolute;
+        right:0px;
+        transition: opacity .1s ease-out; 
+        opacity: 0%;
+        background-color: white;
+        border: solid 1px #333;
+        border-radius: 10px;
+    }
 </style>
 
 <div id="search-menu" class="position-relative w-100 sticky">
+  <p id="tooltip" class="m-0 px-1"><small><em>Click me to close menu!</em></small></p>
+    
     <i class="bi bi-x" id="clear" onclick="searchbox.blur();"></i>
     <input type="text" class="form-control w-100" placeholder="Search for keyword" id="searchbox" autocomplete="off" />
     <ul id="searchresults" class="position-absolute z-3 w-100 p-0">
 
     </ul>
+    
 </div>
 
 <script define:vars={{search_contents}}>
@@ -52,7 +82,7 @@ import search_contents from "../search.json"
  * All Rights Reserved. Apache Software License 2.0
  *
  * http://www.apache.org/licenses/LICENSE-2.0
- */
+*/
 
 (function (global, factory) {
   typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = factory() :
@@ -2132,7 +2162,7 @@ import search_contents from "../search.json"
         searchbox.focus();
     });
 
-    searchresults.addEventListener('mouseover', function() {
+    searchbox.addEventListener('mouseout', function() {
         searchbox.blur();
     });
 
@@ -2151,6 +2181,7 @@ import search_contents from "../search.json"
     )
 
     function resize_searchbar(){
+      console.log(document.querySelector('body').clientWidth)
       if (document.querySelector('body').clientWidth <= 768){
         searchbox.classList.add('form-control-lg')
       }else{
@@ -2161,15 +2192,15 @@ import search_contents from "../search.json"
     resize_searchbar();
 
     const clear_icon = document.querySelector("#clear");
+    const clear_icon_tooltip = document.querySelector("#tooltip");
 
     function resize_icon(){
       clear_icon.style = `font-size: ${searchbox.clientHeight}px; top: -${searchbox.clientHeight/4+2}px;`;
+      tooltip.style = `top: ${searchbox.clientHeight+2}px;`;
       console.log(`${searchbox.clientHeight}px`)
     }
 
     resize_icon();
-
-    clear_
 
     window.addEventListener(
         "resize", 
