--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const pagename = cleaned[1]
 		<link href="/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
-
+		<script src="/popper.min.js" is:inline></script>
 		<script src="/bootstrap.min.js" is:inline></script>
 		
 
