--- a/src/components/Example.astro
+++ b/src/components/Example.astro
@@ -16,7 +16,7 @@ const { id, title, solution="True" } = Astro.props;
 </style>
 
 
-<div class="my-2">
+<div class="my-2 text-black">
     <div class="background-green d-flex flex-column">
         <div id={id} class='overflow-auto d-flex flex-row align-items-center'>
             <button class="btn btn-secondary" id={'example_btn_'+id}>+</button>
