--- a/src/components/Warning.astro
+++ b/src/components/Warning.astro
@@ -11,7 +11,7 @@ const { id, title } = Astro.props;
 </style>
 
 
-<div class="my-2">
+<div class="my-2 text-black">
     <div class="background-red d-flex flex-column">
         <div id={id} class='overflow-auto d-flex flex-row align-items-center'>
             <button class="btn btn-secondary" id={'warning_btn_'+id}>+</button>
