--- a/src/components/SidebarContainer.astro
+++ b/src/components/SidebarContainer.astro
@@ -9,8 +9,7 @@
         const underscore_to_spaces = page.replaceAll("_", " ").toLowerCase()
 
         name = underscore_to_spaces.charAt(0).toUpperCase() + underscore_to_spaces.slice(1)
-    }
-    
+    } 
 ---
 
 <style>
@@ -33,8 +32,6 @@
         content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
     }
 
-    
-
     #nav-tree-container_ul{
         list-style-type: none;
     }
@@ -45,14 +42,14 @@
     }
 </style>
 
-<div id="nav_container" class="d-flex flex-column">
+<div id="nav_container" class="d-flex flex-column ">
     <Sidebar current_course={course} current_page={page}/>
     <div class="d-flex flex-column align-items-left mb-0 mb-xl-4 ps-3 mt-3 mt-xl-0 w-100" id="hideable-container">
         {(page && course) &&
-        <p class="mb-2 fw-bold text-black h5 text-decoration-underline ">Current page:</p> 
+        <p class="mb-2 fw-bold h5 text-decoration-underline themed-text">Current page:</p> 
         <button class="btn d-inline-flex align-items-center rounded collapsed sidebar-btn p-0 mb-1" data-bs-toggle="collapse" data-bs-target="#navtree-collapse">
             
-            <p class='text-start text-black my-0 h5 fw-bold text-wrap '>{name}</p>
+            <p class='text-start themed-text my-0 h5 fw-bold text-wrap '>{name}</p>
         </button>
         <div id="navtree-collapse" class="collapse">
             <ul class='list-group list-group-flush py-0 mb-3' id="nav-tree-container">
