--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const pagename = cleaned[1]
 		<title>{title}</title>
 
 		<link href="/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+		<link href="/bootstrap-icons.min.css" rel="stylesheet">
 
 		<script src="/popper.min.js" is:inline></script>
 		<script src="/bootstrap.min.js" is:inline></script>
@@ -74,7 +74,6 @@ const pagename = cleaned[1]
 			<div class="w-100 pt-0 pt-xl-3">
 				<div class="w-100 mb-3">
 					<Searchbar/>
-					<button onclick="toggle_theme();">Toggle theme</button>
 				</div>
 				<slot />
 			</div>
@@ -95,9 +94,7 @@ const pagename = cleaned[1]
 			rgb(var(--accent-light)) 30%,
 			white 60%
 		);
-		--text-main: black;
-        --text-secondary: #4a4a4a;
-		--text-tertiary: #666;
+
 	}
 
 	mjx-container{
