--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const pagename = cleaned[1]
 		<title>{title}</title>
 
 		<link href="/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+		<link href="/bootstrap-icons.min.css" rel="stylesheet">
 
 		<script src="/popper.min.js" is:inline></script>
 		<script src="/bootstrap.min.js" is:inline></script>
@@ -43,9 +43,17 @@ const pagename = cleaned[1]
 		
 		
 		<script src="/static/js/simplified_view.js" is:inline></script>
+
+		<link rel="stylesheet" href="/static/css/lightTheme.css" id="lightTheme">
+		<link rel="stylesheet" href="/static/css/darkTheme.css" id="darkTheme" disabled>
+
+		<script src="/static/js/themes.js" is:inline></script>
+		<link rel="stylesheet" href="/static/css/themes.css">
 		
 		<link rel="stylesheet" href="/static/css/main.css">
 		<link rel="stylesheet" href="/static/css/sidebar.css">
+
+		
 	
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-2YD4TR8K2S"></script>
@@ -86,17 +94,11 @@ const pagename = cleaned[1]
 			rgb(var(--accent-light)) 30%,
 			white 60%
 		);
-		--text-main: black;
-        --text-secondary: #4a4a4a;
-		--text-tertiary: #666;
+
 	}
 
 	mjx-container{
 		max-width: 90vw;
-	}
-
-	.highlighter{
-		background-color: coral;
 	}
 
 	body {
