--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -20,7 +20,7 @@ const coursetags = {
 <nav class="w-100 py-0 navbar navbar-expand" style="background-color: black;">
     
     <!-- <div class="collapse navbar-collapse"> -->
-        <div class="container">
+        <div class="container overflow-auto">
             <ul class="navbar-nav me-auto mb-0 ">
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
                 <li class="nav-item">
