--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -54,7 +54,7 @@ The general procedures for creating shear / bending moment diagrams are:</p>
     <Item>Divide the beam into regions: one region for every change in loading</Item>
     <Item>Analyze each region by cutting inside each region and analyzing the free body diagram of the left side of the cut</Item>
     <Item>Apply equations of equilibrium to solve for \(V\) and \(M\) as functions of x</Item>
-<Enumerate>
+</Enumerate>
 
 <Image src='/Statics/IntForceFigures/IntLoadRecap.jpg' width='8'>Examples of shear and moment diagrams</Image>
 
