--- a/src/pages/sol/shear_moment_diagrams.astro
+++ b/src/pages/sol/shear_moment_diagrams.astro
@@ -3,12 +3,70 @@ import Layout from "../../layouts/Layout.astro"
 import Image from "../../components/Image.astro" 
 import Section from "../../components/Section.astro" 
 import SubSection from "../../components/SubSection.astro" 
-import RedText from "../../components/RedText.astro" 
+import Enumerate from "../../components/Enumerate.astro" 
+import Item from "../../components/Item.astro" 
+import InlineEquation from "../../components/InlineEquation.astro"
 ---
 <Layout title="Shear Moment Diagrams">
-<Section title="Shear Moment Diagrams - Link to statics on the bending page instead of a repeated page?"></Section>
+    <div slot="navtree">
+        <ul class='list-group list-group-flush py-0'>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#internal_forces'>Internal Forces</a></li>  
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#sign_conventions'>Sign Conventions</a></li> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_procedure'>General Procedure</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_rules'>General Rules</a></li>
+      </ul>
+      </div>
 
-<SubSection title="Component 1"> </SubSection>
+<Section title="Shear Moment Diagrams" id="vm_diagrams"></Section>
+<SubSection title="Internal Forces" id="internal_forces">
+<p>
+Internal forces of a member can be determined by creating an imaginary cut in a member, and then solving for the internal shear force, normal force, and bending moment (which, after the cut, become "external" forces that can be solved for). 
+</p>
 
-<SubSection title="Component 2"></SubSection>
+<p>
+To determine how the internal shear force and bending moment change throughout the member, shear force and bending moment diagrams are created. Shear force diagrams provide a graphical representation of the internal shear force within a member, and bending moment diagrams provide a graphical representation of the internal bending moment within a member. 
+</p>
+
+<Image src='/Statics/IntForceFigures/IntForces.jpg' width='5 '> Internal shear force (V), internal normal force (N), and internal moment (M).</Image>
+
+</SubSection>
+
+<!-- starts in lecture 19 -->
+
+<SubSection title="Sign Conventions" id="sign_conventions">
+
+<Image src='/Statics/IntForceFigures/SignConventions.jpg' width='5'> Sign conventions for internal forces and moments</Image>
+
+</SubSection>
+
+
+<SubSection title="General Procedure" id="general_procedure">
+<p>
+Creating a shear force and bending moment diagram allows us to create a graphical representation of <InlineEquation equation='V' /> and <InlineEquation equation='M' /> as a function of the position along the beam, <InlineEquation equation='x' />. Therefore when creating internal loading diagrams we are trying to write equations for <InlineEquation equation='V(x)' /> and <InlineEquation equation='M(x)' />.
+</p>
+
+<p>
+The general procedures for creating shear / bending moment diagrams are:</p> 
+<!-- %from TAM 210 Lecture 22 -->
+<Enumerate>
+    <Item>Find support reactions</Item>
+    <Item>Specify the x-coordinates</Item>
+    <Item>Divide the beam into regions: one region for every change in loading</Item>
+    <Item>Analyze each region by cutting inside each region and analyzing the free body diagram of the left side of the cut</Item>
+    <Item>Apply equations of equilibrium to solve for \(V\) and \(M\) as functions of x</Item>
+</Enumerate>
+
+<Image src='/Statics/IntForceFigures/IntLoadRecap.jpg' width='7'>Examples of shear and moment diagrams</Image>
+
+</SubSection>
+
+<SubSection title="General Rules" id="general_rules">
+
+<Enumerate>
+	<Item>When there is an external concentrated force or moment, there will be a "jump" in the shear force or bending moment diagram
+    </Item>
+	<Item>\(w(x)\), \(V\), and \(M\) are related via the following relationship: </Item>
+</Enumerate>
+
+<Image src='/Statics/IntForceFigures/IntDerivRelationships.jpg' width='6'>Relationships between \(w(x)\), \(V\), and \(M\).</Image>
 </Layout>
