--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -51,7 +51,7 @@ const coursetags = {
                     <a class="nav-link active text-white py-1 pe-1" onclick="toggle_theme();" style="cursor: pointer;">Toggle theme</a>
                     <div class="vr d-none d-sm-block" style="color: white;"></div>
                 
-                <script>
+                <script is:inline>
                     const theme_icon = document.querySelector("#theme-icon");
                     //bi-moon
                     if (theme == "dark"){
