--- a/src/pages/sta/introduction.astro
+++ b/src/pages/sta/introduction.astro
@@ -62,6 +62,8 @@ The mutual forces of action and reaction between two particles are equal, opposi
 <SubSubSection title="Example" id="example">
 
 <PrairieDrawCanvas id="rep-ff-c" width="600" height="600" >
+    <button onclick="rep_ff_c.toggleAnim()">animate</button>
+    <button onclick="rep_ff_c.reset()">reset</button>
 	<p>A point mass moving in the plane with an applied force. You can try to made the mass move in a circle and then see what happens when the force is suddenly removed, which will demonstrate Newton's first law (no net force implies motion at constant speed in a constant direction). Also observe which force directions cause the speed to increase or decrease.</p>
 
   <small><em>Click and drag to impart a force on the particle.</em></small>
